# MulitRender

./: CMakeLists.txt  README.md
Application/: Adapter.cpp  Adapter.h  BeautyPass.cpp  BeautyPass.h  BufferResource.cpp  BufferResource.h  CMakeLists.txt  CPUDescriptorAllocation.cpp  CPUDescriptorAllocation.h  CPUDescriptorAllocator.cpp  CPUDescriptorAllocator.h  CPUDescriptorPage.cpp  CPUDescriptorPage.h  Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  CommandRecorder.cpp  CommandRecorder.h  ConfigParameter.h  CubeMesh.cpp  CubeMesh.h  Device.cpp  Device.h  Effect.cpp  Effect.h  EffectManager.cpp  EffectManager.h  Frame.cpp  Frame.h  FrameData.cpp  FrameData.h  GraphicsResource.cpp  GraphicsResource.h  GraphicsSystem.cpp  GraphicsSystem.h  (+64 more)
Application/Shader/: CMakeLists.txt  GenerateMipsCS.cso  ShadowVS.cso  ShadowVS.hlsl  SimplePS.cso  SimplePS.hlsl  SimpleVS.cso  SimpleVS.hlsl
